objects/Scribe_Width_Base_Table__c.object
<CustomObject>
    <fields>
        <fullName>Electrical_Debugging_Customer_StructureH__c</fullName>
        <label>Electrical Debugging+Customer StructureH</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electrical_Debugging_Customer_StructureV__c</fullName>
        <label>Electrical Debugging+Customer StructureV</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electrical_Reliability_Structures_H__c</fullName>
        <label>Electrical Reliability Structures H</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electrical_Reliability_Structures_V__c</fullName>
        <label>Electrical Reliability Structures V</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electrical_Wafer_Disposition_StructuresH__c</fullName>
        <label>Electrical Wafer Disposition StructuresH</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electrical_Wafer_Disposition_StructuresV__c</fullName>
        <label>Electrical Wafer Disposition StructuresV</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electrical_Yield_Bring_Up_Structures_H__c</fullName>
        <label>Electrical Yield Bring-Up Structures H</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electrical_Yield_Bring_Up_Structures_V__c</fullName>
        <label>Electrical Yield Bring-Up Structures V</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Display__c</fullName>
        <defaultValue>true</defaultValue>
        <label>On Display ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optical_and_Manufacturing_Structures_H__c</fullName>
        <label>Optical and Manufacturing Structures H</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Optical_and_Manufacturing_Structures_V__c</fullName>
        <label>Optical and Manufacturing Structures V</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Technology_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Technology Number</label>
        <referenceTo>Process_Technology__c</referenceTo>
        <relationshipLabel>Scribe Width Base Table</relationshipLabel>
        <relationshipName>Scribe_Width_Base_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_Technology__c</fullName>
        <label>Process Technology</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Std_Horizontal_scribe_width_post_shrink__c</fullName>
        <label>Std Horizontal scribe width post shrink</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Std_Horizontal_scribe_width_pre_shrink__c</fullName>
        <label>Std Horizontal scribe width pre shrink</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Std_Vertical_scribe_width_post_shrink__c</fullName>
        <label>Std Vertical scribe width post shrink</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Std_Vertical_scribe_width_pre_shrink__c</fullName>
        <label>Std Vertical scribe width pre shrink</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Scribe Width Base Table</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Process_Technology__c</columns>
        <columns>Process_Technology_Number__c</columns>
        <columns>Electrical_Debugging_Customer_StructureH__c</columns>
        <columns>Electrical_Debugging_Customer_StructureV__c</columns>
        <columns>Electrical_Reliability_Structures_H__c</columns>
        <columns>Electrical_Reliability_Structures_V__c</columns>
        <columns>Electrical_Wafer_Disposition_StructuresH__c</columns>
        <columns>Electrical_Wafer_Disposition_StructuresV__c</columns>
        <columns>Electrical_Yield_Bring_Up_Structures_H__c</columns>
        <columns>Electrical_Yield_Bring_Up_Structures_V__c</columns>
        <columns>Optical_and_Manufacturing_Structures_H__c</columns>
        <columns>Optical_and_Manufacturing_Structures_V__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BT-{00000000}</displayFormat>
        <label>Scribe Width Base Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scribe Width Base Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>